--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT =8000
 MODE = development
-MONGO_URL = mongodb+srv://peter:peter2020@cluster0.mrpn4.mongodb.net/noon-db
-secret = 'AHMED_PRIVATE_KEY'
+MONGO_URL = mongodb+srv://sabrien:sabrien@cluster0.n8dla.mongodb.net/amazon-db
+
+secret = 'sabrien_key'
