fix connection issue

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 PORT =8000
 MODE = development
 MONGO_URL = mongodb+srv://sabrien:sabrien@cluster0.n8dla.mongodb.net/amazon-db
-
-secret = 'sabrien_key'
+secret = sabrien_key
